# MordorChess

./: .gitignore  README.md  pyproject.toml  setup.py
ChessPy/: super_import_functions.py
MordorChess/: __init__.py  super_important_functions.py
MordorChess/command_line_interface/: play_chess.py
docs/: CHANGELOG.md
