[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MordorChess"
authors = [
  { name="David Alan Gardener" },
]
version='25.1.0'
description = "The Mordor of Python chess code"
readme = "docs/README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "tbd"
Documentation = "tbd"
Repository = "https://github.com/DikDik-Dave/MordorChess"
Issues = "https://github.com/DikDik-Dave/MordorChess/issues"

#[project.scripts]
#play-chess = "chess.command_line_interface:play_chess"